tests/src/snapshots/valid__assignment_constant.snap
---
source: tests/src/valid.rs
expression: let x = 47
---

=== Source ===
let x = 47

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
    IdentifierLower(
        4,
        5,
    ),
    Equals(
        6,
        7,
    ),
    DecimalDigits(
        8,
        10,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 10,
        imports: [],
        body: [
            Assignment {
                start: 0,
                end: 10,
                is_constant: true,
                left: Identifier {
                    start: 4,
                    end: 5,
                    name: "x",
                    inferred_type: Unknown,
                },
                right: NumericLiteral {
                    start: 8,
                    end: 10,
                    value: Int(
                        47,
                    ),
                    raw_value: "47",
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
