tests/src/snapshots/valid__assignment_variable.snap
---
source: tests/src/valid.rs
expression: "let x := 47"
---

=== Source ===
let x := 47

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
    Identifier(
        4,
        5,
    ),
    ColonEquals(
        6,
        8,
    ),
    DecimalDigits(
        9,
        11,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 11,
        imports: [],
        body: [
            Assignment {
                start: 0,
                end: 11,
                is_constant: false,
                left: Identifier {
                    start: 4,
                    end: 5,
                    name: "x",
                    inferred_type: Unknown,
                },
                right: NumericLiteral {
                    start: 9,
                    end: 11,
                    value: Int(
                        47,
                    ),
                    raw_value: "47",
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
