tests/src/snapshots/valid__call.snap
---
source: tests/src/valid.rs
expression: func()
---

=== Source ===
func()

=== Tokens ===
[
    Identifier(
        0,
        4,
    ),
    LeftParen(
        4,
        5,
    ),
    RightParen(
        5,
        6,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 6,
        imports: [],
        body: [
            Call {
                start: 4,
                end: 6,
                callee: Identifier {
                    start: 0,
                    end: 4,
                    name: "func",
                    qualifier: None,
                    inferred_type: Unknown,
                },
                arguments: [],
                inferred_type: Unknown,
            },
        ],
    },
)
