tests/src/snapshots/valid__call_with_args.snap
---
source: tests/src/valid.rs
expression: "func(1, \"two\", three)"
---

=== Source ===
func(1, "two", three)

=== Tokens ===
[
    IdentifierLower(
        0,
        4,
    ),
    LeftParen(
        4,
        5,
    ),
    DecimalDigits(
        5,
        6,
    ),
    Comma(
        6,
        7,
    ),
    StringLiteral(
        9,
        12,
    ),
    Comma(
        13,
        14,
    ),
    IdentifierLower(
        15,
        20,
    ),
    RightParen(
        20,
        21,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 21,
        imports: [],
        body: [
            Call {
                start: 4,
                end: 21,
                callee: Identifier {
                    start: 0,
                    end: 4,
                    name: "func",
                    inferred_type: Unknown,
                },
                arguments: [
                    NumericLiteral {
                        start: 5,
                        end: 6,
                        value: Int(
                            1,
                        ),
                        raw_value: "1",
                        inferred_type: Unknown,
                    },
                    StringLiteral {
                        start: 9,
                        end: 12,
                        value: "two",
                        inferred_type: Unknown,
                    },
                    Identifier {
                        start: 15,
                        end: 20,
                        name: "three",
                        inferred_type: Unknown,
                    },
                ],
                inferred_type: Unknown,
            },
        ],
    },
)
