tests/src/snapshots/valid__empty.snap
---
source: tests/src/valid.rs
expression: ""
---

=== Source ===


=== Tokens ===
[]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 0,
        imports: [],
        body: [],
    },
)
