tests/src/snapshots/valid__err_incomplete_assignment.snap
---
source: tests/src/valid.rs
expression: let
---

=== Source ===
let

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
]

=== Comments ===
{}

=== AST ===
Err(
    UnexpectedEOF,
)
