tests/src/snapshots/valid__err_incomplete_assignment_2.snap
---
source: tests/src/valid.rs
expression: let x
---

=== Source ===
let x

=== Tokens ===
[
    KeywordLet(
        0,
        3,
    ),
    IdentifierLower(
        4,
        5,
    ),
]

=== Comments ===
{}

=== AST ===
Err(
    UnexpectedEOF,
)
