tests/src/snapshots/valid__identifier.snap
---
source: tests/src/valid.rs
expression: hello
---

=== Source ===
hello

=== Tokens ===
[
    Identifier(
        0,
        5,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 5,
        imports: [],
        body: [
            Identifier {
                start: 0,
                end: 5,
                name: "hello",
                inferred_type: Unknown,
            },
        ],
    },
)
