tests/src/snapshots/valid__import_module.snap
---
source: tests/src/valid.rs
expression: use something
---

=== Source ===
use something

=== Tokens ===
[
    KeywordUse(
        0,
        3,
    ),
    ImportPath(
        4,
        13,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 13,
        imports: [
            Import {
                start: 0,
                end: 13,
                alias: None,
                path: "something",
            },
        ],
        body: [],
    },
)
