tests/src/snapshots/valid__import_module_with_alias.snap
---
source: tests/src/valid.rs
expression: use something as alias
---

=== Source ===
use something as alias

=== Tokens ===
[
    KeywordUse(
        0,
        3,
    ),
    ImportPath(
        4,
        13,
    ),
    KeywordAs(
        14,
        16,
    ),
    Identifier(
        17,
        22,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 22,
        imports: [
            Import {
                start: 0,
                end: 22,
                alias: Some(
                    "alias",
                ),
                module_name: "something",
            },
        ],
        body: [],
    },
)
