tests/src/snapshots/valid__import_two_modules.snap
---
source: tests/src/valid.rs
expression: "use something\nuse path/to/module\nlet x = 47"
---

=== Source ===
use something
use path/to/module
let x = 47

=== Tokens ===
[
    KeywordUse(
        0,
        3,
    ),
    ImportPath(
        4,
        13,
    ),
    LineBreak(
        13,
        14,
    ),
    KeywordUse(
        14,
        17,
    ),
    ImportPath(
        18,
        32,
    ),
    LineBreak(
        32,
        33,
    ),
    KeywordLet(
        33,
        36,
    ),
    Identifier(
        37,
        38,
    ),
    Equals(
        39,
        40,
    ),
    DecimalDigits(
        41,
        43,
    ),
]

=== Comments ===
{}

=== AST ===
Ok(
    Module {
        start: 0,
        end: 43,
        imports: [
            Import {
                start: 0,
                end: 13,
                alias: None,
                path: "something",
            },
            Import {
                start: 14,
                end: 32,
                alias: None,
                path: "path/to/module",
            },
        ],
        body: [
            Assignment {
                start: 33,
                end: 43,
                is_constant: true,
                left: Identifier {
                    start: 37,
                    end: 38,
                    name: "x",
                    qualifier: None,
                    inferred_type: Unknown,
                },
                right: NumericLiteral {
                    start: 41,
                    end: 43,
                    value: Int(
                        47,
                    ),
                    raw_value: "47",
                    inferred_type: Unknown,
                },
                inferred_type: Unknown,
            },
        ],
    },
)
